# Calculator-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  calculator.rs  main.rs
tests/: calculator_engine.rs
